--- a/src/Microsoft.Framework.WebEncoders/project.json
+++ b/src/Microsoft.Framework.WebEncoders/project.json
@@ -5,6 +5,9 @@
         "allowUnsafe": true
     },
     "dependencies": {
+        "Microsoft.Framework.ConfigurationModel": "1.0.0-*",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-*",
+        "Microsoft.Framework.OptionsModel": "1.0.0-*",
         "Microsoft.Framework.NotNullAttribute.Internal": { "type": "build", "version": "1.0.0-*" }
     },
     "frameworks": {
